[package]
name = "spectacle"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
im = "14.3"
impl-tuples = { path = "impl-tuples" }
serde_json = { version = "1.0", optional = true }
spectacle-derive = { path = "spectacle-derive", optional = true }

[features]
default = [ "collections", "derive" ]
collections = []
derive = [ "spectacle-derive" ]
serde-json = [ "serde_json" ]

[workspace]
members = [
    ".",
    "impl-tuples",
    "spectacle-derive",
]
