[package]
name = "spectacle"
version = "0.2.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"
repository = "https://github.com/coriolinus/spectacle"
license = "LGPL-3.0"
description = "Opt-in runtime introspection"

[dependencies]
im = "14.3"
serde_json = { version = "1.0", optional = true }
spectacle-derive = { path = "spectacle-derive", version = "0.1", optional = true }
spectacle-impl-tuples = { path = "impl-tuples", version = "0.2" }

[features]
default = [ "collections", "derive" ]
collections = []
derive = [ "spectacle-derive" ]
serde-json = [ "serde_json" ]

[workspace]
members = [
    ".",
    "impl-tuples",
    "spectacle-derive",
]
