[package]
name = "spectacle-impl-tuples"
version = "0.2.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"
repository = "https://github.com/coriolinus/spectacle"
license = "LGPL-3.0"
description = "impl spectacle::Introspect for arbitrary variants"

[dependencies]
quote = "1.0.3"
syn = "1.0.17"


[lib]
proc-macro = true
