[package]
name = "spectacle-derive"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"
repository = "https://github.com/coriolinus/spectacle"
license = "LGPL-3.0"
description = "#[derive(Spectacle)]"

[dependencies]
quote = "1.0.3"
proc-macro2 = "1.0.10"
syn = "1.0.17"
proc-macro-error = "1.0.2"

[lib]
proc-macro = true
